@@ -44,7 +44,7 @@ direct input to member functions that take a
 
 \twocolwidtha{7cm}
 \begin{twocollist}
-\twocolitem{{\bf EVT\_SPIN(id, func)}}{Generated whenever an arros is pressed.}
+\twocolitem{{\bf EVT\_SPIN(id, func)}}{Generated whenever an arrow is pressed.}
 \twocolitem{{\bf EVT\_SPIN\_UP(id, func)}}{Generated when left/up arrow is pressed.}
 \twocolitem{{\bf EVT\_SPIN\_DOWN(id, func)}}{Generated when right/down arrow is pressed.}
 \end{twocollist}%
