@@ -46,6 +46,10 @@ Constructor, taking a style and optional pointer to a wxString variable.
 checks if the user input is on the list, complaining if not.}
 \twocolitem{{\bf wxFILTER\_EXCLUDE\_LIST}}{Use an exclude list. The validator
 checks if the user input is on the list, complaining if it is.}
+\twocolitem{{\bf wxFILTER\_INCLUDE\_CHAR\_LIST}}{Use an include list. The validator
+checks if each input character is in the list (one character per list element), complaining if not.}
+\twocolitem{{\bf wxFILTER\_INCLUDE\_CHAR\_LIST}}{Use an include list. The validator
+checks if each input character is in the list (one character per list element), complaining if it is.}
 \end{twocollist}
 }
 
