@@ -158,6 +158,7 @@ All (GUI):
 - added (platform-dependent) scan code to wxKeyEvent (Bryce Denney)
 - added wxTextCtrl::EmulateKeyPress()
 - Added wxMouseCaptureChangedEvent
+- Added custom character filtering to wxTextValidator
 
 wxMSW:
 
